# flutter_jni_poc

./: README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native_lib.cc
android/app/src/main/kotlin/xin/ctkqiang/flutter_jni_poc/: AndroidShellHolder.kt  MainActivity.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/menu/: main_menu.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
web/: index.html  manifest.json
